context/source-materials/legacy/changeswork-full/planning/mvp/versions/v6.0/tasks/mvp_tasks_scorecards_page.md
# Задачи для страницы "Скоркарты" (Scorecards List View)

## Обзор страницы

**Страница:** Список скоркарт (Scorecards List View)
**Путь в макете:** Боковое меню → "Скоркарты"
**Статус:** Адаптация существующей страницы

### Что показывает страница (из макете):

**Табличное представление со столбцами:**
- Дата утверждения (approved_at)
- Продукт
- Внедрение (название внедрения, к которому относится скоркарта)
- Критичность (low/medium/high/critical)
- Статус (draft/active/archived)

**Функционал:**
- Фильтрация по продукту (dropdown)
- Поиск по названию
- Сортировка по столбцам
- Пагинация
- Экспорт в Excel (с дополнительными столбцами)
- Панель инструментов:
  - Кнопка "Экспорт в Excel"
  - Кнопка "Столбцы" (выбор отображаемых столбцов)
  - Кнопка "Фильтры" (расширенные фильтры)
  - Кнопка "Высота строки"
  - Иконка "Настройки"
- Клик на строку → переход к детальному просмотру

**Права доступа:**
- ПРМ видит скоркарты своего продукта (read-only)
- Методолог видит все скоркарты и может создавать/редактировать
- Админ видит все скоркарты и может создавать/редактировать

**Особенности:**
- Скоркарты могут быть не привязаны к внедрению (показывать "—")
- Связь с внедрением через пилоты или изменения (многие-ко-многим)
- Экспорт включает дополнительные столбцы: ID, Название, Шаблон, Версия, Ручная, AR(абс), Объём выдач, NPV, RC

---

## AN-SC1: Аналитика страницы "Скоркарты"

**Тип:** Story
**Приоритет:** Критический
**Оценка:** 1 день

### Summary
Детализация требований для адаптации страницы списка скоркарт с экспортом в Excel

### Description

Провести аналитику для адаптации страницы списка скоркарт:

1. **Детализация бизнес-требований:**
   - Уточнить правила фильтрации по продуктам
   - Определить правила сортировки по умолчанию
   - Уточнить логику отображения внедрения (через пилоты/изменения)
   - Определить правила доступа для разных ролей
   - Уточнить формат экспорта в Excel (какие столбцы)

2. **Спецификация UI/UX:**
   - Адаптация существующей таблицы (5 столбцов)
   - Спецификация фильтров и поиска
   - Дизайн панели инструментов
   - Спецификация пагинации

3. **Спецификация API контракта:**
   - GET /api/scorecards/ - список с фильтрацией
   - GET /api/scorecards/export/ - экспорт в Excel
   - Параметры запроса (product_id, status, search, page, page_size, ordering)
   - Формат ответа (список + метаданные пагинации)
   - Коды ошибок (403, 404, 500)

4. **Определение полей таблицы:**
   - Дата утверждения (DD.MM.YYYY или "—")
   - Продукт (название продукта)
   - Внедрение (название внедрения или "—")
   - Критичность (цветной чип)
   - Статус (цветной бейдж)

5. **Определение полей для экспорта:**
   - ID (SC-XXX)
   - Название
   - Продукт
   - Шаблон (template_version)
   - Версия (v1.0, v2.0)
   - Критичность
   - Статус
   - Ручная (да/нет - is_manual)
   - Дата создания
   - AR(абс) - из финансовых эффектов
   - Объём выдач - из финансовых эффектов
   - NPV - из финансовых эффектов
   - RC - из финансовых эффектов

### Acceptance Criteria

- [ ] Бизнес-требования задокументированы
- [ ] API контракт задокументирован
- [ ] Определены все поля таблицы с типами данных
- [ ] Определены поля для экспорта в Excel
- [ ] Правила фильтрации и сортировки описаны
- [ ] Логика отображения внедрения описана
- [ ] Права доступа для ролей определены
- [ ] Документ согласован с заказчиком

### Dependencies
Нет

### Deliverables
- Документ "Спецификация страницы Скоркарты" (markdown/confluence)
- API контракт для GET /api/scorecards/ и GET /api/scorecards/export/

---

## BE-SC1: Backend для страницы "Скоркарты"

**Тип:** Story
**Приоритет:** Критический
**Оценка:** 5 дней

### Summary
Разработка API endpoint для списка скоркарт с фильтрацией, пагинацией и экспортом в Excel

### Description

Разработать Backend API для страницы списка скоркарт:

1. **API Endpoint: GET /api/scorecards/**

   **Параметры запроса:**
   - `product_id` (optional) - фильтр по продукту
   - `status` (optional) - фильтр по статусу (draft/active/archived)
   - `search` (optional) - поиск по названию (case-insensitive, partial match)
   - `page` (optional, default=1) - номер страницы
   - `page_size` (optional, default=20) - размер страницы
   - `ordering` (optional, default='-created_at') - сортировка

   **Формат ответа:**
   ```json
   {
     "count": 42,
     "next": "http://api/scorecards/?page=2",
     "previous": null,
     "results": [
       {
         "id": "uuid",
         "display_id": "SC-001",
         "name": "Скоркарта Premium v2.0",
         "product": {
           "id": "uuid",
           "name": "Premium карты"
         },
         "deployment": {
           "id": "uuid",
           "display_id": "DEP-001",
           "name": "Оптимизация риск-стратегии Premium карт"
         },
         "criticality": "high",
         "status": "active",
         "approved_at": "2026-03-01T10:00:00Z",
         "created_at": "2026-02-15T10:00:00Z"
       }
     ]
   }
   ```

2. **API Endpoint: GET /api/scorecards/export/**

   **Параметры запроса:** те же, что для GET /api/scorecards/

   **Формат ответа:** Excel файл (.xlsx)

   **Столбцы в Excel:**
   - ID (SC-XXX)
   - Название
   - Продукт
   - Шаблон (template_version)
   - Версия (v1.0, v2.0)
   - Критичность
   - Статус
   - Ручная (да/нет)
   - Дата создания (DD.MM.YYYY HH:MM)
   - AR(абс) - из financial_effects
   - Объём выдач - из financial_effects
   - NPV - из financial_effects
   - RC - из financial_effects

3. **Бизнес-логика:**
   - Фильтрация по правам доступа:
     - ПРМ видит только свой продукт (read-only)
     - Методолог видит все
     - Админ видит все
   - Поиск по названию (case-insensitive, ILIKE для PostgreSQL)
   - Сортировка по умолчанию: -created_at (новые первые)
   - Отображение внедрения через связи с пилотами/изменениями (многие-ко-многим)
   - Если скоркарта не привязана к внедрению → deployment = null

4. **Права доступа:**
   - Middleware проверяет роль пользователя
   - Автоматическая фильтрация по product_id для ПРМ
   - HTTP 403 если ПРМ пытается получить чужой продукт

5. **Оптимизация:**
   - Select related для product, deployment
   - Prefetch related для pilots, changes (для определения deployment)
   - Индексы на product_id, status, created_at

6. **Экспорт в Excel:**
   - Использовать библиотеку openpyxl или xlsxwriter
   - Применять те же фильтры, что и для списка
   - Заголовки на русском языке
   - Форматирование дат: DD.MM.YYYY HH:MM
   - Content-Disposition: attachment; filename="scorecards_export_YYYY-MM-DD.xlsx"

### Acceptance Criteria

- [ ] GET /api/scorecards/ endpoint реализован
- [ ] Фильтрация по product_id, status работает
- [ ] Поиск по названию работает (case-insensitive)
- [ ] Пагинация работает корректно (default page_size=20)
- [ ] Сортировка по умолчанию: -created_at
- [ ] Права доступа реализованы (ПРМ видит только свой продукт, read-only)
- [ ] HTTP 403 возвращается при попытке доступа к чужому продукту
- [ ] Отображение внедрения через пилоты/изменения работает
- [ ] Скоркарты без внедрения отображаются корректно (deployment = null)
- [ ] GET /api/scorecards/export/ endpoint реализован
- [ ] Excel файл генерируется с правильными столбцами
- [ ] Финансовые эффекты (AR, Объём выдач, NPV, RC) включены в экспорт
- [ ] Select related/prefetch оптимизация применена
- [ ] Unit тесты покрывают все сценарии (coverage > 80%)
- [ ] API документация обновлена

### Dependencies
- AN-SC1 (требуется API контракт)

### Technical Notes

**Пример определения внедрения через связи:**
```python
def get_deployment(scorecard):
    """Получить внедрение через связи с пилотами/изменениями"""
    # Через пилоты
    pilots = scorecard.pilots.all()
    for pilot in pilots:
        if pilot.deployment:
            return pilot.deployment

    # Через изменения
    changes = scorecard.changes.all()
    for change in changes:
        if change.deployment:
            return change.deployment

    return None
```

**Пример SQL оптимизации (Django ORM):**
```python
from django.db.models import Q

Scorecard.objects.filter(
    Q(name__icontains=search),
    product_id=product_id,
    status=status
).select_related(
    'product'
).prefetch_related(
    'pilots__deployment',
    'changes__deployment'
).order_by('-created_at')
```

---

## FE-SC1: Frontend для страницы "Скоркарты"

**Тип:** Story
**Приоритет:** Критический
**Оценка:** 5 дней

### Summary
Разработка UI страницы списка скоркарт с таблицей, фильтрами, панелью инструментов и экспортом в Excel

### Description

Разработать Frontend для страницы списка скоркарт:

1. **Компонент ScorecardsView:**
   - Табличное представление (Material-UI Table)
   - Столбцы: Дата утверждения, Продукт, Внедрение, Критичность, Статус
   - Responsive дизайн

2. **Панель инструментов (Toolbar):**
   - Кнопка "Экспорт в Excel" (скачивание файла)
   - Кнопка "Столбцы" (выбор отображаемых столбцов)
   - Кнопка "Фильтры" (расширенные фильтры)
   - Кнопка "Высота строки" (компактная/стандартная/комфортная)
   - Иконка "Настройки" (дополнительные настройки)

3. **Фильтры и поиск:**
   - Dropdown фильтр по продукту
   - Dropdown фильтр по статусу
   - Поле поиска по названию (debounce 300ms)
   - Кнопка "Сбросить фильтры"

4. **Сортировка:**
   - По умолчанию: по дате создания (новые первые)
   - Клик на заголовок столбца → сортировка
   - Индикатор направления сортировки

5. **Пагинация:**
   - Material-UI Pagination компонент
   - Показывать "Показано X-Y из Z"
   - Выбор размера страницы (10/20/50)

6. **Статусные бейджи:**
   - draft: серый
   - active: зеленый
   - archived: серый с opacity

7. **Критичность:**
   - Цветной чип:
     - low: зеленый
     - medium: желтый
     - high: оранжевый
     - critical: красный

8. **Отображение внедрения:**
   - Если скоркарта привязана к внедрению → название внедрения (кликабельное)
   - Если не привязана → "—"

9. **Экспорт в Excel:**
   - Клик на кнопку "Экспорт в Excel" → вызов API GET /api/scorecards/export/
   - Применение текущих фильтров к экспорту
   - Скачивание файла через браузер
   - Toast уведомление "Экспорт начат..."

10. **Навигация:**
    - Клик на строку → переход к детальному просмотру
    - Breadcrumbs: "Скоркарты"

11. **Loading и Error состояния:**
    - Skeleton loader при загрузке
    - Error message при ошибке API
    - Empty state если нет данных

12. **API интеграция:**
    - ScorecardService.getList(filters, page, pageSize, ordering)
    - ScorecardService.exportToExcel(filters)
    - Обработка ошибок (403, 404, 500)
    - Toast уведомления при ошибках

### Acceptance Criteria

- [ ] ScorecardsView компонент реализован
- [ ] Таблица отображает все 5 столбцов корректно
- [ ] Панель инструментов реализована со всеми кнопками
- [ ] Кнопка "Экспорт в Excel" работает
- [ ] Кнопка "Столбцы" позволяет выбирать отображаемые столбцы
- [ ] Кнопка "Фильтры" открывает расширенные фильтры
- [ ] Кнопка "Высота строки" меняет высоту строк таблицы
- [ ] Фильтр по продукту работает
- [ ] Фильтр по статусу работает
- [ ] Поиск по названию работает (с debounce)
- [ ] Сортировка по столбцам работает
- [ ] Пагинация работает корректно
- [ ] Статусные бейджи отображаются с правильными цветами
- [ ] Критичность отображается с правильным цветом
- [ ] Внедрение отображается корректно (название или "—")
- [ ] Клик на название внедрения открывает детальный просмотр внедрения
- [ ] Клик на строку открывает детальный просмотр скоркарты
- [ ] Breadcrumbs отображается корректно
- [ ] Loading состояние (skeleton) работает
- [ ] Error состояние отображается
- [ ] Empty state отображается если нет данных
- [ ] Responsive дизайн работает
- [ ] API интеграция работает корректно
- [ ] Экспорт в Excel работает с применением фильтров
- [ ] Обработка ошибок реализована
- [ ] Unit тесты для компонента (coverage > 70%)

### Dependencies
- AN-SC1 (требуется UI спецификация)
- BE-SC1 (требуется готовый API endpoint)

---

## Итоговая зависимость задач

```
AN-SC1 (1 день)
  ↓
BE-SC1 (5 дней)
  ↓
FE-SC1 (5 дней)
```

**Общая длительность (критический путь):** 11 дней

**Параллельная работа:**
- BE-SC1 может начаться сразу после AN-SC1
- FE-SC1 может начаться только после готовности BE-SC1

---

## ✅ Ключевые особенности страницы

1. **Новая разработка** - не адаптация существующей страницы
2. **5 столбцов в таблице** - Дата утверждения, Продукт, Внедрение, Критичность, Статус
3. **Панель инструментов** - Экспорт, Столбцы, Фильтры, Высота строки, Настройки
4. **Экспорт в Excel** - 13 столбцов с финансовыми эффектами
5. **Внедрение через связи** - отображение через пилоты/изменения (многие-ко-многим)
6. **Скоркарты без внедрения** - отображение "—"
7. **Фильтрация по продукту и статусу** - dropdown фильтры
8. **Поиск по названию** - с debounce 300ms
9. **Сортировка по умолчанию** - по дате создания (новые первые)
10. **Права доступа** - ПРМ видит только свой продукт (read-only), методолог и админ видят все
11. **Responsive дизайн** - адаптация под разные разрешения

---
